--- a/react-web-app/index.html
+++ b/react-web-app/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://static.toiimg.com/thumb/msid-31942786,imgsize-24017,width-400,resizemode-4/31942786.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>
+      if (global === undefined) {
+        var global = window;
+      }
+    </script>
     <title>Balu's React Project</title>
   </head>
   <body>
